# UCSD_VECTOR_DB

./: .gitignore  README.md  pyproject.toml  vector_db_4bit.ipynb  vector_db_test.ipynb  vector_db_testing.ipynb
