[tool.poetry]
name = "ucsd-vector-db"
version = "0.1.0"
description = ""
authors = ["hyukychang <seunghyuk.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.3.2"
ipykernel = "^6.29.5"
torch = "^2.6.0"
transformers = "^4.49.0"
langchain = "^0.3.20"
huggingface-hub = "^0.29.2"
ipywidgets = "^8.1.5"
accelerate = "^1.4.0"
pymupdf = "^1.25.3"
langchain-community = "^0.3.19"
sentence-transformers = "^3.4.1"
chromadb = "^0.6.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
